fix: font and spacing

--- a/src/Mohassel/Components/LegalCalendar/style.scss
+++ b/src/Mohassel/Components/LegalCalendar/style.scss
@@ -1,3 +1,8 @@
+* {
+  font-family: 'Cairo', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 .time {
   vertical-align: middle !important;
 }
